--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nanoid": "^5.1.6",
     "react": "^19",
     "react-dom": "^19",
+    "react-router-dom": "^7.1.1",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
