--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.17",
+    "@types/bun": "latest",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "@types/react-dom": "^19"
   }
 }
