--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "allowJs": true,
+    "target": "ES2022",
 
     // Bundler mode
     "moduleResolution": "bundler",
