--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
+    "lz-string": "^1.5.0",
     "nanoid": "^5.1.6",
     "react": "^19",
     "react-dom": "^19",
